finish top two sections of Landing-Page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
     </head>
 
     <body>
-
+        <div class="top-fourth">
+            <div class="header">
+                <h2 style="font-size: 24px">Header Logo</h2>
+                <ul class="header-list" style="font-size: 18px; color: #E5E7EB;">
+                 <li>header link one</li>
+                 <li>header link two</li>
+                 <li>header link three</li>
+                </ul>      
+            </div>
+            <div class="top-fourth-mid">
+                <div class="top-fourth-mid-left">
+                    <h1 style="font-size: 48px;">This website is awesome</h1>
+                    <p width="250">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button style="width: 100px; margin-right: auto;">Sign up</button>
+                </div>
+                <div class="top-fouth-mid-right">
+                    <img src="https://images.pexels.com/photos/2253275/pexels-photo-2253275.jpeg?cs=srgb&dl=pexels-helena-lopes-2253275.jpg&fm=jpg"
+                    alt="cute dog" height="250" width="500">
+                </div>
+            </div>   
+        </div>
+        <div class="second">
+            <div class="second-top">
+                <h2 style="font-size: 36px; font-weight: 800; color: #1F2937;">Some random information.</h2>
+            </div>
+            <div class="second-bottom">
+                <img src="https://images.pexels.com/photos/4109130/pexels-photo-4109130.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="cheeseburger" height="250" width="250">
+                <img src="https://images.pexels.com/photos/1769279/pexels-photo-1769279.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="chickens" height="250" width="250">
+                <img src="https://images.pexels.com/photos/87009/earth-soil-creep-moon-lunar-surface-87009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="earth" height="250" width="250">
+                <img src="https://images.pexels.com/photos/251454/pexels-photo-251454.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="socks" height="250" width="250">
+            </div>
+            <div class="second-text">
+                <p style="width: 250px; display: flex; justify-content: center; color: #3A3B3C;">This is a cheeseburger, I am hungry</p>
+                <p style="width: 250px; display: flex; justify-content: center; color: #3A3B3C;">Chickens are tasty too</p>
+                <p style="width: 250px; display: flex; justify-content: center; color: #3A3B3C;">Existential crisis time</p>
+                <p style="width: 250px; display: flex; justify-content: center; color: #3A3B3C;">Socks keep me grounded</p>
+            </div>
+        </div>       
     </body>
 </html>
