add third section, make all rows 25em

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <p width="250">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button style="width: 100px; margin-right: auto;">Sign up</button>
                 </div>
-                <div class="top-fouth-mid-right">
+                <div class="top-fourth-mid-right">
                     <img src="https://images.pexels.com/photos/2253275/pexels-photo-2253275.jpeg?cs=srgb&dl=pexels-helena-lopes-2253275.jpg&fm=jpg"
-                    alt="cute dog" height="250" width="500">
+                    alt="cute dog" height="150" width="300">
                 </div>
             </div>   
         </div>
@@ -49,6 +49,16 @@
                 <p style="width: 250px; display: flex; justify-content: center; color: #3A3B3C;">Existential crisis time</p>
                 <p style="width: 250px; display: flex; justify-content: center; color: #3A3B3C;">Socks keep me grounded</p>
             </div>
-        </div>       
+        </div> 
+        <div class="third-fromtop">
+            <div class="third-quote">
+                <p style="margin-left: 300px; margin-right: 250px;">
+                    "If I were to die right now in a fiery explosion due to the carelessness of a friend…. Then it would just be alright."
+                </p>
+            </div>
+            <div class="third-source">
+                <p>-Spongebob Squarepants</p>
+            </div>
+        </div>      
     </body>
 </html>
