--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
 
-    <body>
+    <body style="margin: 0;">
         <div class="top-fourth">
             <div class="header">
                 <h2 style="font-size: 24px">Header Logo</h2>
@@ -58,6 +58,17 @@
             </div>
             <div class="third-source">
                 <p>-Spongebob Squarepants</p>
+            </div>
+        </div>
+        <div class="fourth">
+            <div class="fourth-content">
+                <div class="fourth-left">
+                    <p style="margin-bottom: 8px; font-size: 24px; font-weight: bold;">Call to action! It's time!</p>
+                    <p style="margin-top: 0px;">Sign up for our product by clicking that button right over there!</p>
+                </div>
+               <div class="fourth-right">
+                    <button class="defaultbutton">Sign up</button>
+               </div>
             </div>
         </div>      
     </body>
