--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                     <button class="defaultbutton">Sign up</button>
                </div>
             </div>
+        </div>
+        <div class="footer">
+            <p>Copyright © The Odin Project 2021</p>
         </div>      
     </body>
 </html>
