add finishing touches to project

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
         <link rel="stylesheet" href="styles.css">
     </head>
 
-    <body style="margin: 0;">
-        <div class="top-fourth">
-            <div class="header">
-                <h2 style="font-size: 24px">Header Logo</h2>
-                <ul class="header-list" style="font-size: 18px; color: #E5E7EB;">
-                 <li>header link one</li>
-                 <li>header link two</li>
-                 <li>header link three</li>
-                </ul>      
-            </div>
-            <div class="top-fourth-mid">
-                <div class="top-fourth-mid-left">
-                    <h1 style="font-size: 48px;">This website is awesome</h1>
-                    <p width="250">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button style="width: 100px; margin-right: auto;">Sign up</button>
+    <body style="margin: 0; background-color: black;">
+        <div class="container">
+            <div class="top-fourth">
+                <div class="header">
+                    <h2 style="font-size: 24px">Header Logo</h2>
+                    <ul class="header-list" style="font-size: 18px; color: #E5E7EB;">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                    </ul>      
                 </div>
+                <div class="top-fourth-mid">
+                    <div class="top-fourth-mid-left">
+                        <h1 style="font-size: 48px;">This website is awesome</h1>
+                        <p width="250">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                        <button style="width: 100px; margin-right: auto;">Sign up</button>
+                    </div>
                 <div class="top-fourth-mid-right">
                     <img src="https://images.pexels.com/photos/2253275/pexels-photo-2253275.jpeg?cs=srgb&dl=pexels-helena-lopes-2253275.jpg&fm=jpg"
                     alt="cute dog" height="150" width="300">
@@ -73,6 +74,7 @@
         </div>
         <div class="footer">
             <p>Copyright © The Odin Project 2021</p>
-        </div>      
+        </div>   
+    </div>   
     </body>
 </html>
